--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,14 @@
     </style>
   </head>
   <body>
-    <h1>Калькулятор. Расчет по доступным тарифам.</h1>
+    <h1>Serverless Functions made with Go!</h1>
+    
+    <a href="/api/date"> Serverless Function print current Date </a>
+    <a href="/api/hello"> Serverless Function print "Hello World!" </a>
+    <a href="/api/json"> Serverless Function print JSON </a>
+    <a href="/api/redis"> Serverless Function Set and Get Upstash Redis.io</a>
+    <a href="/api/myinfo">
+      Serverless Function to show user infos [IP, user-agent, accept-language]
+    </a>
   </body>
 </html>
