--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,12 @@
   </head>
   <body>
     <h1>Serverless Functions made with Go!</h1>
-    
+
     <a href="/api/date"> Serverless Function print current Date </a>
     <a href="/api/hello"> Serverless Function print "Hello World!" </a>
     <a href="/api/json"> Serverless Function print JSON </a>
     <a href="/api/redis"> Serverless Function Set and Get Upstash Redis.io</a>
+    <a href="/api/cdek"> Serverless Function Set and Get Upstash Redis.io</a>
     <a href="/api/myinfo">
       Serverless Function to show user infos [IP, user-agent, accept-language]
     </a>
